the ptf was replaced, minor adjustments were made in the styles and html

--- a/index.html
+++ b/index.html
@@ -22,53 +22,55 @@
 
             <p class="mt-0 mb-0 center">Batumi, Georgia. ivangaevskiy@mail.ru</p>
             <!--<p class="mt-0 mb-5">ivangaevskiy@mail.ru</p>-->
-            <table class="mt-5 mb-0 table-font-size">
-							<tbody>
-								<tr>
-									<td>— Ruby</td>
-									<td>— Git</td>
-									<td>— GitLab</td>
-								</tr>
-								<tr>
-									<td>— Docker</td>
-									<td>— SQL</td>
-									<td>— Kafka</td>
-								</tr>
-								<tr>
-									<td>— Ruby On Rails</td>
-									<td>— OOP, SOLID</td>
-									<td>— Bootstrap</td>
-								</tr>
-								<tr>
-									<td>— Sidekiq</td>
-									<td>— GitHub</td>
-									<td>— Karafka</td>
-								</tr>
-								<tr>
-									<td>— Linux</td>
-									<td>— PostgleSQL</td>
-									<td>— GraphOL</td>
-								</tr>
-								<tr>
-									<td>— Redis</td>
-									<td>— REST-API</td>
-									<td>— RabbitMQ</td>
-								</tr>
-							</tbody>
-			</table>
+            <div style= "display: grid; place-items: center;">
+                <table class="mt-5 mb-0 table-font-size">
+                                <tbody>
+                                    <tr>
+                                        <td>— Ruby</td>
+                                        <td>— Git</td>
+                                        <td>— GitLab</td>
+                                    </tr>
+                                    <tr>
+                                        <td>— Docker</td>
+                                        <td>— SQL</td>
+                                        <td>— Kafka</td>
+                                    </tr>
+                                    <tr>
+                                        <td>— Ruby On Rails</td>
+                                        <td>— OOP, SOLID</td>
+                                        <td>— Bootstrap</td>
+                                    </tr>
+                                    <tr>
+                                        <td>— Sidekiq</td>
+                                        <td>— GitHub</td>
+                                        <td>— Karafka</td>
+                                    </tr>
+                                    <tr>
+                                        <td>— Linux</td>
+                                        <td>— PostgleSQL</td>
+                                        <td>— GraphOL</td>
+                                    </tr>
+                                    <tr>
+                                        <td>— Redis</td>
+                                        <td>— REST-API</td>
+                                        <td>— RabbitMQ</td>
+                                    </tr>
+                                </tbody>
+                </table>
+            </div>
 
             <p class="mt-5 mb-0 center inversion-column">
 
-                    <button class="button" onclick="window.open('https://t.me/Ivan_Ruby_Developer', '_blank')"><b>Telegram</b></button> 
-                    <button class="button" onclick="window.open('https://github.com/IvanGaevskiy/inline_scrolling_without_JavaScript_DEMO', '_blank')"><b>GitHub</b></button> 
-                    <button class="button" onclick="window.open('pdf_rus.pdf')"><b>Скачать PDF</b></button>
+                    <button class="button" onclick="window.open('https://t.me/Ivan_Ruby_Developer', '_blank')"><strong>Telegram</strong></button> 
+                    <button class="button" onclick="window.open('https://github.com/IvanGaevskiy/inline_scrolling_without_JavaScript_DEMO', '_blank')"><strong>GitHub</strong></button> 
+                    <button class="button" onclick="window.open('pdf_rus.pdf')"><strong>Скачать PDF</strong></button>
 
             </p>
         </div>
         
         <!-- Описание опыта работы, пройденные курсы, хобби:
         ================================================================================   -->
-        <div>
+        <div class="mt-5">
             <h2 class="mt-0 mb-5">Rails Real Estate Development</h2>
             <h3 class="mt-5 mb-5">Ноябрь 2022 — Июнь 2024. 1 год 10 месяцев.</h3>
             <h4 class="mb-5">Backend-разработка сайта по продаже недвижимости на Ruby on Rails.</h4>
@@ -103,7 +105,7 @@
                 <p class="mb-5">Ruby Rush. Разработчик на языке Ruby. https://rubyrush.ru</p>
 
                 <h2 class="mb-5">Hobbies:</h2>
-                <p class="mb-5">Теология, логика, актёрское мастерство, турник.</p>
+                <p class="mb-5">Теология, логика, актёрское мастерство, воркаут.</p>
         </div>
     </div>
 </body>
