--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </tr>
             <tr>
               <td>— Linux</td>
-              <td>— PostgleSQL</td>
-              <td>— GraphOL</td>
+              <td>— PostgreSQL</td>
+              <td>— GraphQL</td>
             </tr>
             <tr>
               <td>— Redis</td>
@@ -70,20 +70,18 @@
       <div class="mb-variable">
         <h2 class="mt-0 mb-5">Rails Real Estate Development</h2>
         <h3 class="mt-5 mb-5">Ноябрь 2022 — Июнь 2024. 1 год 10 месяцев.</h3>
-        <h4 class="mb-5">Backend-разработка сайта по продаже недвижимости на Ruby on Rails.</h4>
+        <h4 class="mb-5">Разработка сайта по продаже недвижимости на Ruby on Rails.</h4>
         <p>- Создание и настройка панелей администратора, юзера, верстка форм, создание функциональных пользовательских интерфейсов;</p>
         <p>- Создание бизнес логики, в том числе: API эндпоинтов, экшенов, контроллеров, моделей, сервисов, триггеров, rake-задач;</p>
         <p>- Использование RabbitMQ, Kafka и Karafka для обмена сообщениями между сервисами приложения;</p>
+        <p>- Реализация онлайн чата с возможностью добавления файлов через active storage;</p>
         <p>- Настройка Sidekiq workers и db NoSQL Redis для обработки фоновых задач;</p>
+        <p>- Реализация авторизации и регистрации без пароля через телеграм-бота;</p>
         <p>- Работа с миграциями, создание моделей, валидаций, сидов;</p>
         <p>- Реализация пагинации через встроенный гем turbo-rails;</p>
         <p>- Создание и модификация: helpers, partials and flashes;</p>
         <p>- Модификация роутинга, работа с CRUD;</p>
         <p>- Покрытие части логики rspec тестами;</p>
-        <p>- Настройка ассоциаций;</p>
-        <p>- Использование gitlab;</p>
-        <p>- Деплой на докере;</p>
-        <p>- Рефакторинг.</p>
       </div>
       <div class="mb-variable">
         <h2 class="mb-5">Bot Father Team</h2>
